--- a/Client/src/app/verify-code/verify-code.component.html
+++ b/Client/src/app/verify-code/verify-code.component.html
@@ -1,5 +1,5 @@
 <div class="center">
-  <app-otpconfig *ngIf="isParametrized && !parametrizationComplete"></app-otpconfig>
+  <app-otpconfig (dataToSendEmitter)="setParameters($event)" *ngIf="isParametrized && !parametrizationComplete"></app-otpconfig>
   <div *ngIf="parametrizationComplete">
     <h1 *ngIf="src.length > 0">Scan the QR</h1>
     <img *ngIf="src.length > 0" [src]="src" alt="qr code" width="200" height="200" />
