--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,1 +1,4 @@
+<mat-toolbar color="primary">
+    <span>Time-based OTP - Poliba Project (Information Systems Security & Privacy)</span>
+</mat-toolbar>
 <router-outlet></router-outlet>
