--- a/Client/src/app/home/home.component.html
+++ b/Client/src/app/home/home.component.html
@@ -1,7 +1,8 @@
 <div class="title">
-  <h2>Titolo del progetto</h2>
+  <!-- <h2>Titolo del progetto</h2> -->
+  <img src="\..\..\assets\logo.png" alt="Time-based OTP" width="382.5" height="312.5">
 </div>
 <div class="navigator">
-  <button mat-stroked-button color="primary" class="login-button" [routerLink]="'/login'">Login</button>
-  <button mat-stroked-button color="primary" [routerLink]="'/signup'">Register</button>
+  <button mat-flat-button color="primary" class="custom-button" [routerLink]="'/login'">Log In</button>
+  <button mat-flat-button color="primary" class="custom-button" [routerLink]="'/signup'">Sign Up</button>
 </div>
