--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,4 +1,10 @@
 <mat-toolbar color="primary">
-    <span>Time-based OTP - Poliba Project (Information Systems Security & Privacy)</span>
+    <mat-toolbar-row>
+        <span>Time-based OTP - Poliba Project (Information Systems Security & Privacy)</span>
+        <span class="toolbar-spacer"></span>
+        <button [routerLink]="['/']" mat-icon-button aria-label="Home">
+            <mat-icon>home</mat-icon>
+        </button>
+    </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
