--- a/Client/src/app/landing-page/landing-page.component.html
+++ b/Client/src/app/landing-page/landing-page.component.html
@@ -1,10 +1,8 @@
 <div class="center">
 
   <h1>
-    Hello {{userName}}
+    Hi <b>{{userName}}</b>, welcome to your personal area!
   </h1>
 
   <button mat-raised-button (click)="logout()" color="warn" *ngIf="userName.length > 0"> Logout</button>
-  <!-- <button mat-raised-button color="primary" [routerLink]="['/login']" *ngIf="userName.length <= 0">
-    Login</button> -->
 </div>
