--- a/Client/src/app/verify-code/verify-code.component.html
+++ b/Client/src/app/verify-code/verify-code.component.html
@@ -1,16 +1,14 @@
-<div class="center">
-  <app-otpconfig (dataToSendEmitter)="setParameters($event)" *ngIf="isParametrized && !parametrizationComplete"></app-otpconfig>
-  <div *ngIf="parametrizationComplete">
-    <h1 *ngIf="src.length > 0">Scan the QR</h1>
-    <img *ngIf="src.length > 0" [src]="src" alt="qr code" width="200" height="200" />
+<app-otpconfig (dataToSendEmitter)="setParameters($event)" *ngIf="isParametrized && !parametrizationComplete"></app-otpconfig>
+<div *ngIf="parametrizationComplete" class="center">
+  <h1 *ngIf="src.length > 0">Scan the QR</h1>
+  <img *ngIf="src.length > 0" [src]="src" alt="qr code" width="200" height="200" />
 
-    <h1 *ngIf="src.length <= 0">Enter Code</h1>
-    <br />
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Enter Code</mat-label>
-      <input matInput [(ngModel)]="code" type="text" autocomplete="off" />
-    </mat-form-field>
-    <br />
-    <button mat-stroked-button color="primary" (click)="onverify()">Submit</button>
-  </div>
+  <h1 *ngIf="src.length <= 0">Enter Code</h1>
+  <br />
+  <mat-form-field class="example-full-width" appearance="fill">
+    <mat-label>Enter Code</mat-label>
+    <input matInput [(ngModel)]="code" type="text" autocomplete="off" />
+  </mat-form-field>
+  <br />
+  <button mat-stroked-button color="primary" (click)="onverify()">Submit</button>
 </div>
